Fix linked README badge spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -1730,10 +1730,24 @@ main {
   text-align: center;
 }
 
+.markdown p:has(> a > img) {
+  text-align: center;
+}
+
 .markdown p:has(> img + img) > img {
   display: inline-block;
   vertical-align: middle;
   margin: 6px 8px;
+}
+
+.markdown p:has(> a > img) > a {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 6px 8px;
+}
+
+.markdown p:has(> a > img) > a > img {
+  display: block;
 }
 
 .markdown img,
